0024007: [Regression] Sporadic crashes when working with XDE documents